Feb 2025 - Add new photos from China and Japan trip in 2023 and 2024

--- a/index.html
+++ b/index.html
@@ -204,15 +204,17 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item night mb-30 wow fadeInUp"
+
+                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item nature mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/monument_valley_sunrise.nature.jpg" alt="">
+                        <img src="img/bg-img/Mount_fuji.nature.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/monument_valley_sunrise.nature.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/Mount_fuji.nature.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
+
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
                     data-wow-delay="500ms">
@@ -230,6 +232,46 @@
                         <img src="img/bg-img/Tokyo_qiancaosi.city.jpg" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/Tokyo_qiancaosi.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/monument_valley_sunrise.nature.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/monument_valley_sunrise.nature.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Ykoto_youzhaiting.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Ykoto_youzhaiting.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Ykoto_youzhaiting2.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Ykoto_youzhaiting2.city.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item city mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/Shanghai_stairs.city.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/Shanghai_stairs.city.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
