[Feb 23, 2025] Add xhs and YouTube account to the website and fix bugs.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 target="_blank"><img src="./img/footer-icons/ins_logo_black.png"><span>Instagram</span></a>
         </li>
         <li>
-            <a class="icons" href="#" target="_blank">
+            <a class="icons" href="https://www.youtube.com/channel/UCvJqUytKB9ryjRrlJ9QVMIg" target="_blank">
                 <img src="./img/footer-icons/youtube_logo_black.png"><span>YouTube</span></a>
         </li>
         <li>
@@ -122,7 +122,7 @@
                 <img src="./img/footer-icons/bilibili_logo_black.png"><span>Bilibili</span></a>
         </li>
         <li>
-            <a class="icons" href="#"
+            <a class="icons" href="http://xhslink.com/cAPxt6"
                 target="_blank"><img src="./img/footer-icons/xhs_logo_black.jpeg"><span>小红书</span></a>
         </li>
     </ul>
@@ -503,11 +503,11 @@
         <div class="instragram-feed-area owl-carousel">
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/youtube.jpg" alt="">
+                <img src="img/footer-icons/youtube_logo_red.avif" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#" style="font-size: 18px;">
+                    <a href="https://www.youtube.com/channel/UCvJqUytKB9ryjRrlJ9QVMIg" style="font-size: 18px;">
                         <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span>Not Started Yet</span>
+                        <span>@Yi Travel Photography</span>
                     </a>
                 </div>
             </div>
@@ -523,17 +523,17 @@
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/xhs.jpg" alt="">
+                <img src="img/footer-icons/xhs_logo_red.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#" style="font-size: 18px;">
+                    <a href="http://xhslink.com/cAPxt6" style="font-size: 18px;">
                         <i class="fa fa-xiaohongshu" aria-hidden="true"></i>
-                        <span>Not Started Yet</span>
+                        <span>@Yi旅行摄影</span>
                     </a>
                 </div>
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/bilibili.jpg" alt="">
+                <img src="img/footer-icons/bilibili.JPG" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://space.bilibili.com/3546570320513998" style="font-size: 18px;">
                         <i class="fa fa-bilibili" aria-hidden="true"></i>
